--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title></title>
+    <title>mangaCrit</title>
     <meta name="viewport" content="width=device-width">
     <meta name="theme-color" content="#FFC7F6">
     <link rel="stylesheet" href="style/indexstyle.css" type="text/css" media="all" />
@@ -12,7 +12,7 @@
 <body>
     <div class="navtop" id="navtop">
         <a href="#" id="index.html"><img class="navimg" src="image/navimg.jpg" alt="" /></a>
-        <h1 id="navtext" class="navtext">Lorem</h1>
+        <h1 id="navtext" class="navtext">`~`</h1>
         <a href="#" id="navlink" onclick="openbtn();"><img class="navsvg" src="svg/bars-solid.svg" alt="" /></a>
     </div>
     <div id="dropdown" class="dropdown">
