--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style/genre.css" type="text/css" media="all" />
 
 </head>
-<body>
+<body onload="onl();">
     <div class="navtop" id="navtop">
         <a href="#" id="index.html"><img class="navimg" src="image/navimg.jpg" alt="" /></a>
         <h1 id="navtext" class="navtext">`~`</h1>
