--- a/html/dshounen_no_abyss.html
+++ b/html/dshounen_no_abyss.html
@@ -172,7 +172,7 @@
 <body>
     <div class="navtop" id="navtop">
         <a href="../index.html" id="navhome"><img class="navimg" src="../image/navimg.jpg" alt="" /></a>
-        <h1 id="navtext" class="navtext">Lorem</h1>
+        <h1 id="navtext" class="navtext">`~`</h1>
         <a href="#" id="navlink" onclick="openbtn();"><img class="navsvg" src="../svg/bars-solid.svg" alt="" /></a>
     </div>
     <div class="descriptionmain">
